--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
+    <!-- ¡Falta este enlace al CSS! -->
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     {{{body}}}
+    
+    <!-- Socket.io Client (necesario para realtimeproducts) -->
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/index.js"></script> <!-- Si tienes scripts propios -->
 </body>
 </html>
